# online-exam-proctoring-system-minor-project-

./: QUICKSTART.md  README.md  app.py  config.py  face_auth.py  main.py  ping_db.py  proctor.py  pyproject.toml  requirements.txt  run.bat  run.sh  suspicious_score.py
.github/workflows/: mongodb-keepalive.yml
database/: demo_user.py  mongo.py
static/: exam.js  style.css  webcam.js
templates/: dashboard.html  exam.html  login.html  register.html
utils/: face_detection.py  websocket_handlers.py
